# muc-opcua

./: .clang-format  .clang-tidy  .codacy.yaml  .gitignore  .prospector.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  HANDOFF.md  Kconfig  MEMORY.md  Makefile  README.md  ROADMAP.md  TODO.md  optimize-hot-paths.md
examples/: CMakeLists.txt
examples/minimal_server/: README.md  main.c  static_address_space.c  static_address_space.h
examples/pubsub_server/: main.c
platform/pico/: CMakeLists.txt  README.md  mu_pico_adapter.c  mu_pico_adapter.h  pico_minimal_server.c
src/: CMakeLists.txt
src/address_space/: ac_nodes.c  ac_nodes.h  address_space.c  base_nodes.c  base_nodes.h  complex_types.c  node_id.c  value_source.c
src/client/: client.c  client_browse.c  client_call.c  client_errors.c  client_internal.h  client_monitored_item.c  client_publish.c  client_read.c  client_secure_channel.c  client_session.c  client_state.c  client_subscription.c  client_write.c
src/core/: ctz.h  dispatch_attribute.c  dispatch_discovery.c  dispatch_method.c  dispatch_node_mgmt.c  dispatch_session.c  dispatch_subscription.c  dispatch_transfer.c  dispatch_view.c  message_chunk.c  message_chunk.h  pubsub.c  safe_mem.h  sequence.c  sequence.h  server.c  server_internal.h  service_context.h  service_dispatch.c  service_dispatch.h  service_message.c  service_message.h  status.c  tcp_connection.c  tcp_connection.h  uasc.c  uasc.h
src/core/dispatch_discovery/: common.c  common.h  find_servers.c  get_endpoints.c  register_server.c
src/core/server/: common.h  data_chunk.c  dispatch.c  init.c  poll.c  process_message.c
src/core/service_dispatch/: activate_session.c  attribute_handler.c  close_session.c  common.h  create_session.c  dispatch_core.c  filter_reader.c  handler_stubs.c  history_handler.c  monitored_items.c  osc_handler.c  reader_helpers.c  response_encode.c  subscription_crud.c  subscription_helpers.c  transfer_handler.c  triggering.c  view_handler.c
src/encoding/: binary_complex.c  binary_datavalue.c  binary_extension_object.c  binary_le.h  binary_nodeid.c  binary_query.c  binary_reader.c  binary_string.c  binary_variant.c  binary_writer.c  uadp_encoder.c  variant_type.c
src/platform/: host_crypto_adapter.c  host_crypto_adapter.h  host_tcp_adapter.c  host_tcp_adapter.h  host_udp_adapter.c  mbedtls_crypto_adapter.c  mbedtls_crypto_adapter.h  mdns_noop.c  posix_client_transport.c  posix_mdns.c  posix_mdns.h  wolfssl_crypto_adapter.c  wolfssl_crypto_adapter.h
src/platform/host_crypto/: asymmetric.c  cipher.c  common.c  common.h  ecc.c  hash.c  sign.c
src/platform/wolfssl_crypto/: asymmetric.c  cipher.c  common.h  ecc.c  hash.c  sign.c
src/security/: asym_chunk.c  asym_chunk.h  asym_ecc.c  asym_ecc.h  certificate.c  certificate.h  key_derivation.c  key_derivation.h  secure_util.c  secure_util.h  security_policy.c  security_policy.h  sym_chunk.c  sym_chunk.h  trustlist.c
src/security/asym_chunk/: common.h  unwrap.c  wrap.c
src/services/: alarms_conditions.c  audit_events.c  browse.c  browse.h  diagnostics.c  discovery.c  discovery.h  event_filter.c  event_filter.h  history.c  history.h  history_memstore.c  node_management.c  node_management.h  query.c  query.h  read.c  read.h  secure_channel.c  secure_channel.h  service_header.c  service_header.h  session.c  session.h  subscription.c  subscription.h  subscription_aggregate.c  subscription_monitor.c  subscription_publish.c  write.c  write.h
src/services/browse/: browse.c  browse_next.c  common.h  translate_paths.c
src/services/node_management/: add_nodes.c  add_references.c  common.h  delete.c
src/services/read/: cache.c  (+3 more)
tests/: CMakeLists.txt
tests/benchmark/: CMakeLists.txt  audit_latency_benchmark.c  hotpath_benchmark.c
tests/conformance/: CMakeLists.txt  check_claim_map.py  claim_test_map.md  test_check_claim_map_profile_defaults.py
tests/fixtures/: generate_user_fixtures.py  write_batch_req.py  write_int32_req.py
tests/fuzz/: CMakeLists.txt  fuzz_activate_session.c  fuzz_binary_reader.c  fuzz_binary_types.c  fuzz_call.c  fuzz_event_filter_where.c  fuzz_expanded_nodeid.c  fuzz_subscription_filters.c
tests/integration/: CMakeLists.txt  test_connection_robustness.c  test_discovery_endpoint_no_session.c  test_ecc_handshake_e2e.c  test_event_notifications.c  test_jwt_activate_session.c  test_minimal_server_flow.c  test_response_regression.c  test_secure_handshake_modern.c  test_server_framing.c  test_server_handshake.c  test_server_handshake_secure.c  test_single_client_limit.c  test_subscriptions.c  test_translate_browse_path_gate.c  test_user_auth_certificate.c  test_user_auth_encrypted.c  test_user_auth_plaintext.c  test_user_auth_secure_e2e.c  test_view_services.c  test_write_batch.c  test_write_scalar.c  test_write_service.c  test_write_validation.c
tests/interop/: interop_smoke.py  run_interop.sh  run_interop_dotnet.sh
tests/support/: CMakeLists.txt  fake_platform.c  fake_platform.h  mock_transport.h  user_auth_secure_e2e_helpers.h
tests/tools/: test_speed_benchmark.py
tests/unit/: CMakeLists.txt  mock_crypto_adapter.h  test_address_space_callbacks.c  test_address_space_dynamic.c  test_address_space_string_limits.c  test_address_space_validation.c  test_address_space_values.c  test_aggregate.c  test_aggregate_full.c  test_alarms_conditions.c  test_analog_item.c  test_asym_chunk.c  test_async_opcua_inventory.c  test_audit_events.c  test_base_server_behaviour.c  test_binary_array_errors.c  test_binary_bytestring_errors.c  test_binary_extension_object.c  test_binary_nodeid.c  test_binary_nodeid_errors.c  test_binary_primitives.c  test_binary_string.c  test_binary_string_errors.c  test_binary_variant_datavalue.c  test_browse_limits.c  test_browse_service.c  test_build_config.c  test_capacity_propagation.c  test_cert_token_decoder.c  test_certificate.c  test_certificate_management.c  test_certificate_manager.c  test_certificate_validity.c  test_complex_types.c  test_conformance_docs.c  test_connection_multiplex.c  test_crypto.c  test_da_type_nodes.c  test_diagnostics.c  test_discovery_encode.c  (+80 more)
(+1717 files in other folders)
